# squardcoin

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  Makefile.am  README.md  SECURITY.md  configure.ac  libsquardcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.tx/: config
contrib/: README.md  gitian-build.py  install_db4.sh  squardcoin-cli.bash-completion  squardcoin-qt.pro  squardcoin-tx.bash-completion  squardcoind.bash-completion  valgrind.supp
depends/: README.md  description.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  guix.md  i2p.md  init.md  instantsend.md  masternode-budget.md  productivity.md  reduce-memory.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  squardcoin-conf.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
doc/man/: Makefile.am  squardcoin-cli.1  squardcoin-qt.1  squardcoin-tx.1  squardcoin-wallet.1  squardcoind.1
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  amount.h  bip39_english.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet.cpp  bitcoind.cpp  chainparams.cpp  chainparams.h  clientversion.h  (+29 more)
(+438 files in other folders)
